; ModuleID = '/home/carl/AnghaBench/xLua/WebGLPlugins/extr_lapi.c_getupvalref.c'
source_filename = "/home/carl/AnghaBench/xLua/WebGLPlugins/extr_lapi.c_getupvalref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32**, %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }

@.str = private unnamed_addr constant [22 x i8] c"Lua function expected\00", align 1
@.str.1 = private unnamed_addr constant [22 x i8] c"invalid upvalue index\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32** (i32*, i32, i32, %struct.TYPE_6__**)* @getupvalref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32** @getupvalref(i32* %0, i32 %1, i32 %2, %struct.TYPE_6__** %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_6__**, align 8
  %9 = alloca %struct.TYPE_6__*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.TYPE_6__** %3, %struct.TYPE_6__*** %8, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @index2addr(i32* %11, i32 %12)
  store i32 %13, i32* %10, align 4
  %14 = load i32*, i32** %5, align 8
  %15 = load i32, i32* %10, align 4
  %16 = call i32 @ttisLclosure(i32 %15)
  %17 = call i32 @api_check(i32* %14, i32 %16, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %18 = load i32, i32* %10, align 4
  %19 = call %struct.TYPE_6__* @clLvalue(i32 %18)
  store %struct.TYPE_6__* %19, %struct.TYPE_6__** %9, align 8
  %20 = load i32*, i32** %5, align 8
  %21 = load i32, i32* %7, align 4
  %22 = icmp sle i32 1, %21
  br i1 %22, label %23, label %31

23:                                               ; preds = %4
  %24 = load i32, i32* %7, align 4
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 1
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = icmp sle i32 %24, %29
  br label %31

31:                                               ; preds = %23, %4
  %32 = phi i1 [ false, %4 ], [ %30, %23 ]
  %33 = zext i1 %32 to i32
  %34 = call i32 @api_check(i32* %20, i32 %33, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0))
  %35 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %8, align 8
  %36 = icmp ne %struct.TYPE_6__** %35, null
  br i1 %36, label %37, label %40

37:                                               ; preds = %31
  %38 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %39 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %8, align 8
  store %struct.TYPE_6__* %38, %struct.TYPE_6__** %39, align 8
  br label %40

40:                                               ; preds = %37, %31
  %41 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %42 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %41, i32 0, i32 0
  %43 = load i32**, i32*** %42, align 8
  %44 = load i32, i32* %7, align 4
  %45 = sub nsw i32 %44, 1
  %46 = sext i32 %45 to i64
  %47 = getelementptr inbounds i32*, i32** %43, i64 %46
  ret i32** %47
}

declare dso_local i32 @index2addr(i32*, i32) #1

declare dso_local i32 @api_check(i32*, i32, i8*) #1

declare dso_local i32 @ttisLclosure(i32) #1

declare dso_local %struct.TYPE_6__* @clLvalue(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
